3.5.0/_sources/gallery/pyplots/boxplot_demo_pyplot.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/pyplots/boxplot_demo_pyplot.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_gallery_pyplots_boxplot_demo_pyplot.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_pyplots_boxplot_demo_pyplot.py:


============
Boxplot Demo
============

Example boxplot code

.. GENERATED FROM PYTHON SOURCE LINES 8-22

.. code-block:: default


    import numpy as np
    import matplotlib.pyplot as plt

    # Fixing random state for reproducibility
    np.random.seed(19680801)

    # fake up some data
    spread = np.random.rand(50) * 100
    center = np.ones(25) * 50
    flier_high = np.random.rand(10) * 100 + 100
    flier_low = np.random.rand(10) * -100
    data = np.concatenate((spread, center, flier_high, flier_low))








.. GENERATED FROM PYTHON SOURCE LINES 23-28

.. code-block:: default


    fig1, ax1 = plt.subplots()
    ax1.set_title('Basic Plot')
    ax1.boxplot(data)




.. image-sg:: /gallery/pyplots/images/sphx_glr_boxplot_demo_pyplot_001.png
   :alt: Basic Plot
   :srcset: /gallery/pyplots/images/sphx_glr_boxplot_demo_pyplot_001.png, /gallery/pyplots/images/sphx_glr_boxplot_demo_pyplot_001_2_0x.png 2.0x
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none


    {'whiskers': [<matplotlib.lines.Line2D object at 0x7fd224149970>, <matplotlib.lines.Line2D object at 0x7fd224149370>], 'caps': [<matplotlib.lines.Line2D object at 0x7fd224149820>, <matplotlib.lines.Line2D object at 0x7fd210af8790>], 'boxes': [<matplotlib.lines.Line2D object at 0x7fd2241495e0>], 'medians': [<matplotlib.lines.Line2D object at 0x7fd20035bfd0>], 'fliers': [<matplotlib.lines.Line2D object at 0x7fd20035bd60>], 'means': []}



.. GENERATED FROM PYTHON SOURCE LINES 29-34

.. code-block:: default


    fig2, ax2 = plt.subplots()
    ax2.set_title('Notched boxes')
    ax2.boxplot(data, notch=True)




.. image-sg:: /gallery/pyplots/images/sphx_glr_boxplot_demo_pyplot_002.png
   :alt: Notched boxes
   :srcset: /gallery/pyplots/images/sphx_glr_boxplot_demo_pyplot_002.png, /gallery/pyplots/images/sphx_glr_boxplot_demo_pyplot_002_2_0x.png 2.0x
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none


    {'whiskers': [<matplotlib.lines.Line2D object at 0x7fd200f44400>, <matplotlib.lines.Line2D object at 0x7fd200f44070>], 'caps': [<matplotlib.lines.Line2D object at 0x7fd2166f75e0>, <matplotlib.lines.Line2D object at 0x7fd2166f72e0>], 'boxes': [<matplotlib.lines.Line2D object at 0x7fd200f447f0>], 'medians': [<matplotlib.lines.Line2D object at 0x7fd2166f76d0>], 'fliers': [<matplotlib.lines.Line2D object at 0x7fd2166f7070>], 'means': []}



.. GENERATED FROM PYTHON SOURCE LINES 35-41

.. code-block:: default


    green_diamond = dict(markerfacecolor='g', marker='D')
    fig3, ax3 = plt.subplots()
    ax3.set_title('Changed Outlier Symbols')
    ax3.boxplot(data, flierprops=green_diamond)




.. image-sg:: /gallery/pyplots/images/sphx_glr_boxplot_demo_pyplot_003.png
   :alt: Changed Outlier Symbols
   :srcset: /gallery/pyplots/images/sphx_glr_boxplot_demo_pyplot_003.png, /gallery/pyplots/images/sphx_glr_boxplot_demo_pyplot_003_2_0x.png 2.0x
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none


    {'whiskers': [<matplotlib.lines.Line2D object at 0x7fd2003fda30>, <matplotlib.lines.Line2D object at 0x7fd2003fddc0>], 'caps': [<matplotlib.lines.Line2D object at 0x7fd2003fd820>, <matplotlib.lines.Line2D object at 0x7fd2003fd7c0>], 'boxes': [<matplotlib.lines.Line2D object at 0x7fd200442ee0>], 'medians': [<matplotlib.lines.Line2D object at 0x7fd2003fda00>], 'fliers': [<matplotlib.lines.Line2D object at 0x7fd2003fdb50>], 'means': []}



.. GENERATED FROM PYTHON SOURCE LINES 42-47

.. code-block:: default


    fig4, ax4 = plt.subplots()
    ax4.set_title('Hide Outlier Points')
    ax4.boxplot(data, showfliers=False)




.. image-sg:: /gallery/pyplots/images/sphx_glr_boxplot_demo_pyplot_004.png
   :alt: Hide Outlier Points
   :srcset: /gallery/pyplots/images/sphx_glr_boxplot_demo_pyplot_004.png, /gallery/pyplots/images/sphx_glr_boxplot_demo_pyplot_004_2_0x.png 2.0x
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none


    {'whiskers': [<matplotlib.lines.Line2D object at 0x7fd20022f8e0>, <matplotlib.lines.Line2D object at 0x7fd20022fd30>], 'caps': [<matplotlib.lines.Line2D object at 0x7fd20022f520>, <matplotlib.lines.Line2D object at 0x7fd20022f4f0>], 'boxes': [<matplotlib.lines.Line2D object at 0x7fd20022f640>], 'medians': [<matplotlib.lines.Line2D object at 0x7fd20089bfd0>], 'fliers': [], 'means': []}



.. GENERATED FROM PYTHON SOURCE LINES 48-54

.. code-block:: default


    red_square = dict(markerfacecolor='r', marker='s')
    fig5, ax5 = plt.subplots()
    ax5.set_title('Horizontal Boxes')
    ax5.boxplot(data, vert=False, flierprops=red_square)




.. image-sg:: /gallery/pyplots/images/sphx_glr_boxplot_demo_pyplot_005.png
   :alt: Horizontal Boxes
   :srcset: /gallery/pyplots/images/sphx_glr_boxplot_demo_pyplot_005.png, /gallery/pyplots/images/sphx_glr_boxplot_demo_pyplot_005_2_0x.png 2.0x
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none


    {'whiskers': [<matplotlib.lines.Line2D object at 0x7fd200f68160>, <matplotlib.lines.Line2D object at 0x7fd200f68730>], 'caps': [<matplotlib.lines.Line2D object at 0x7fd200f68190>, <matplotlib.lines.Line2D object at 0x7fd200f68430>], 'boxes': [<matplotlib.lines.Line2D object at 0x7fd200f84c10>], 'medians': [<matplotlib.lines.Line2D object at 0x7fd200f68790>], 'fliers': [<matplotlib.lines.Line2D object at 0x7fd2002cd520>], 'means': []}



.. GENERATED FROM PYTHON SOURCE LINES 55-60

.. code-block:: default


    fig6, ax6 = plt.subplots()
    ax6.set_title('Shorter Whisker Length')
    ax6.boxplot(data, flierprops=red_square, vert=False, whis=0.75)




.. image-sg:: /gallery/pyplots/images/sphx_glr_boxplot_demo_pyplot_006.png
   :alt: Shorter Whisker Length
   :srcset: /gallery/pyplots/images/sphx_glr_boxplot_demo_pyplot_006.png, /gallery/pyplots/images/sphx_glr_boxplot_demo_pyplot_006_2_0x.png 2.0x
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none


    {'whiskers': [<matplotlib.lines.Line2D object at 0x7fd2004e5790>, <matplotlib.lines.Line2D object at 0x7fd2004e5a60>], 'caps': [<matplotlib.lines.Line2D object at 0x7fd2004e5d30>, <matplotlib.lines.Line2D object at 0x7fd2004c7040>], 'boxes': [<matplotlib.lines.Line2D object at 0x7fd2004e54c0>], 'medians': [<matplotlib.lines.Line2D object at 0x7fd2004c7310>], 'fliers': [<matplotlib.lines.Line2D object at 0x7fd2004c75e0>], 'means': []}



.. GENERATED FROM PYTHON SOURCE LINES 61-62

Fake up some more data

.. GENERATED FROM PYTHON SOURCE LINES 62-69

.. code-block:: default


    spread = np.random.rand(50) * 100
    center = np.ones(25) * 40
    flier_high = np.random.rand(10) * 100 + 100
    flier_low = np.random.rand(10) * -100
    d2 = np.concatenate((spread, center, flier_high, flier_low))








.. GENERATED FROM PYTHON SOURCE LINES 70-74

Making a 2-D array only works if all the columns are the
same length.  If they are not, then use a list instead.
This is actually more efficient because boxplot converts
a 2-D array into a list of vectors internally anyway.

.. GENERATED FROM PYTHON SOURCE LINES 74-82

.. code-block:: default


    data = [data, d2, d2[::2]]
    fig7, ax7 = plt.subplots()
    ax7.set_title('Multiple Samples with Different sizes')
    ax7.boxplot(data)

    plt.show()




.. image-sg:: /gallery/pyplots/images/sphx_glr_boxplot_demo_pyplot_007.png
   :alt: Multiple Samples with Different sizes
   :srcset: /gallery/pyplots/images/sphx_glr_boxplot_demo_pyplot_007.png, /gallery/pyplots/images/sphx_glr_boxplot_demo_pyplot_007_2_0x.png 2.0x
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 83-89

.. admonition:: References

   The use of the following functions, methods, classes and modules is shown
   in this example:

   - `matplotlib.axes.Axes.boxplot` / `matplotlib.pyplot.boxplot`


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  2.522 seconds)


.. _sphx_glr_download_gallery_pyplots_boxplot_demo_pyplot.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: boxplot_demo_pyplot.py <boxplot_demo_pyplot.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: boxplot_demo_pyplot.ipynb <boxplot_demo_pyplot.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    Keywords: matplotlib code example, codex, python plot, pyplot
    `Gallery generated by Sphinx-Gallery
    <https://sphinx-gallery.readthedocs.io>`_
